@@ -1,3 +1,8 @@
+Travel::Status::DE::IRIS 1.31 - Thu Aug 08 2019
+
+    * Travel::Status::DE::IRIS::Stations: Add EVA/UIC station numbers and use
+      full names for non-german stations.
+
 Travel::Status::DE::IRIS 1.30 - Wed Jul 17 2019
 
     * Result: Add ->station and ->station_uic accessors. These are useful to
